[gd_scene load_steps=12 format=3 uid="uid://cmsmgwm01ywhw"]

[ext_resource type="Texture2D" uid="uid://dygdma8kcfbx" path="res://assets/monk_animarion.png" id="1_07me3"]
[ext_resource type="Script" path="res://elements/Player/player.gd" id="1_hk7q4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qiisx"]
atlas = ExtResource("1_07me3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fs8x"]
atlas = ExtResource("1_07me3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11m88"]
atlas = ExtResource("1_07me3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1afbq"]
atlas = ExtResource("1_07me3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wmwp0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiisx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fs8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11m88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1afbq")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1joag"]
radius = 8.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iku6j"]
radius = 9.0
height = 32.0

[sub_resource type="Gradient" id="Gradient_1n5vh"]
offsets = PackedFloat32Array(0, 0.655844)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_adk0y"]
gradient = SubResource("Gradient_1n5vh")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_hk7q4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wmwp0")
autoplay = "default"
frame_progress = 0.0994617

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_1joag")

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="take_damage_timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_iku6j")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.798798, 0.525799, 0.18803, 1)
energy = 0.24
texture = SubResource("GradientTexture2D_adk0y")

[connection signal="timeout" from="Reload_speed" to="." method="_on_reload_speed_timeout"]
[connection signal="timeout" from="take_damage_timer" to="." method="_on_take_damage_timer_timeout"]
